// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the datagrid with a title 1`] = `
<div
  class="datagrid"
>
  <div
    class="headerContainer"
  >
    <h1
      class="header"
    >
      Snippets
    </h1>
    <div
      class="toolbar"
    >
      <label
        class="input dark collapsed hasAppendIcon"
      >
        <div
          class="prependedContainer dark collapsed"
        >
          <span
            aria-label="su-search"
            class="icon dark iconClickable collapsed su-search clickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          type="text"
          value=""
        />
      </label>
    </div>
  </div>
  <div
    class="datagrid"
  >
    <section>
      <div
        class="tableContainer"
      >
        <table
          class="table"
        >
          <thead
            class="header"
          >
            <tr>
              <th
                class="headerCell"
              >
                <span>
                  <label
                    class="label"
                  >
                    <span
                      class="switch checkbox light"
                    >
                      <input
                        type="checkbox"
                      />
                      <span />
                    </span>
                  </label>
                </span>
              </th>
              <th
                class="headerCell clickable"
              >
                <button>
                  Description
                </button>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="row"
            >
              <td
                class="cell small"
              >
                <div
                  class="cellContent"
                >
                  <label
                    class="label"
                  >
                    <span
                      class="switch checkbox dark"
                    >
                      <input
                        type="checkbox"
                        value="1"
                      />
                      <span />
                    </span>
                  </label>
                </div>
              </td>
              <td
                class="cell"
              >
                <div
                  class="cellContent"
                >
                  Description 1
                </div>
              </td>
            </tr>
            <tr
              class="row"
            >
              <td
                class="cell small"
              >
                <div
                  class="cellContent"
                >
                  <label
                    class="label"
                  >
                    <span
                      class="switch checkbox dark"
                    >
                      <input
                        type="checkbox"
                        value="2"
                      />
                      <span />
                    </span>
                  </label>
                </div>
              </td>
              <td
                class="cell"
              >
                <div
                  class="cellContent"
                >
                  Description 2
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <nav
        class="pagination"
      >
        <span
          class="display"
        >
          :
        </span>
        <span>
          <div
            class="select"
          >
            <button
              class="displayValue dark dark"
              type="button"
            >
              <div
                aria-label="10"
                class="croppedText"
                title="10"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  1
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    0
                  </span>
                </div>
                <div
                  class="whole"
                >
                  10
                </div>
              </div>
              <span
                aria-label="su-angle-down"
                class="toggle su-angle-down"
              />
            </button>
          </div>
        </span>
        <div
          class="loader"
        />
        <span
          class="display"
        >
          Page: 2 of 3
        </span>
        <button
          class="previous"
        >
          <span
            aria-label="su-angle-left"
            class="su-angle-left"
          />
        </button>
        <button
          class="next"
        >
          <span
            aria-label="su-angle-right"
            class="su-angle-right"
          />
        </button>
      </nav>
    </section>
  </div>
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`Should render the datagrid with the correct resourceKey 1`] = `
<div
  class="datagrid"
>
  <div
    class="headerContainer"
  >
    <div
      class="toolbar"
    >
      <label
        class="input dark collapsed hasAppendIcon"
      >
        <div
          class="prependedContainer dark collapsed"
        >
          <span
            aria-label="su-search"
            class="icon dark iconClickable collapsed su-search clickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          type="text"
          value=""
        />
      </label>
    </div>
  </div>
  <div
    class="datagrid"
  >
    <section>
      <div
        class="tableContainer"
      >
        <table
          class="table"
        >
          <thead
            class="header"
          >
            <tr>
              <th
                class="headerCell"
              >
                <span>
                  <label
                    class="label"
                  >
                    <span
                      class="switch checkbox light"
                    >
                      <input
                        type="checkbox"
                      />
                      <span />
                    </span>
                  </label>
                </span>
              </th>
              <th
                class="headerCell clickable"
              >
                <button>
                  Description
                </button>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="row"
            >
              <td
                class="cell small"
              >
                <div
                  class="cellContent"
                >
                  <label
                    class="label"
                  >
                    <span
                      class="switch checkbox dark"
                    >
                      <input
                        type="checkbox"
                        value="1"
                      />
                      <span />
                    </span>
                  </label>
                </div>
              </td>
              <td
                class="cell"
              >
                <div
                  class="cellContent"
                >
                  Description 1
                </div>
              </td>
            </tr>
            <tr
              class="row"
            >
              <td
                class="cell small"
              >
                <div
                  class="cellContent"
                >
                  <label
                    class="label"
                  >
                    <span
                      class="switch checkbox dark"
                    >
                      <input
                        type="checkbox"
                        value="2"
                      />
                      <span />
                    </span>
                  </label>
                </div>
              </td>
              <td
                class="cell"
              >
                <div
                  class="cellContent"
                >
                  Description 2
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <nav
        class="pagination"
      >
        <span
          class="display"
        >
          :
        </span>
        <span>
          <div
            class="select"
          >
            <button
              class="displayValue dark dark"
              type="button"
            >
              <div
                aria-label="10"
                class="croppedText"
                title="10"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  1
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    0
                  </span>
                </div>
                <div
                  class="whole"
                >
                  10
                </div>
              </div>
              <span
                aria-label="su-angle-down"
                class="toggle su-angle-down"
              />
            </button>
          </div>
        </span>
        <div
          class="loader"
        />
        <span
          class="display"
        >
          Page: 2 of 3
        </span>
        <button
          class="previous"
        >
          <span
            aria-label="su-angle-left"
            class="su-angle-left"
          />
        </button>
        <button
          class="next"
        >
          <span
            aria-label="su-angle-right"
            class="su-angle-right"
          />
        </button>
      </nav>
    </section>
  </div>
  <div />
  <div />
  <div />
  <div />
</div>
`;
